src/objects/QIPP_Project_Approves_Criteria__mdt.object
<CustomObject>
    <fields>
        <fullName>BG_Value__c</fullName>
        <label>BG Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belt_Certification_Values__c</fullName>
        <label>Belt Certification Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Finance Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Role_Type__c</fullName>
        <label>Project Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finance Approver</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Approver Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6S Belt Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUMBB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QIPP Project Approves Criteria</label>
    <pluralLabel>QIPP Project Approves Criteria</pluralLabel>
</CustomObject>